# Quant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
core/: Cargo.toml
core/benches/: black_scholes_bench.rs
core/src/: lib.rs  types.rs  utils.rs
core/src/models/: maths.rs  mod.rs
core/src/models/derivatives/: black_scholes.rs
core/tests/: derivatives_tests.rs  maths_tests.rs
py-quant/: Cargo.toml  pyproject.toml
py-quant/benches/: benchmark.py
py-quant/src/: lib.rs
