[package]
name = "quant-core"
version = "0.1.0"
edition = "2024"
description = "High-performance quantitative finance library — derivatives pricing, stochastic processes, and Greeks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conorzen/quant-core"
homepage = "https://github.com/conorzen/quant-core"
documentation = "https://docs.rs/quant-core"
readme = "README.md"
authors = ["Conor Reid <reidconor06@gmail.com>"]
keywords = ["quantitative-finance", "derivatives", "black-scholes", "options", "greeks"]
categories = ["mathematics", "science", "algorithms"]


[lib]
name = "quant_core"
crate-type = ["lib", "cdylib"]

[dependencies]
libm = "0.2.16"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "black_scholes_bench"
harness = false